# toshl-sync

./: ChangeLog.md  README.md  README.org  demo.nix  package.yaml  schema.sql  sketch.epgz  stack.yaml  toshl-diff.cabal  toshl-gate.cabal
app/: Main.hs  Main.hs-bak
data/: tcs-sample.csv
lib/Adapters/Service/Toshl/: API.hs
lib/Drivers/: ThreepennyMain.hs
lib/Entities/: Toshl.hs
lib/Rules/Service/: Toshl.hs
src/: Accounts.hs  App.hs  CLI.hs  CSVUtils.hs  Config.hs  Lib.hs  Lib.hs-bak  Main.hs  Model.hs  Reconcile.hs  Tinkoff.hs  TinkoffCSV.hs  Toshl.hs  ToshlAPI.hs  ToshlCSV.hs  UI.hs
tests/: ReconcileSpec.hs  TinkoffCSVSpec.hs  ToshlCSVSpec.hs  doctests.hs  tinkoff-sample.csv  toshl-sample.csv
www/: index.html
