name:                toshl-diff
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Alexey Lebedeff
maintainer:          binarin@binarin.ru
-- copyright:           
-- category:            
build-type:          Custom
extra-source-files:  ChangeLog.md
cabal-version:       >=1.24

custom-setup
  setup-depends:
    base, Cabal, cabal-doctest
                           
library
  hs-source-dirs: src
  exposed-modules: Lib, Model, ToshlCSV, TinkoffCSV, CSVUtils
  default-language:    Haskell2010
  build-depends:       Decimal,
                       base >=4.9 && <4.10,
                       bytestring,
                       cassava >= 0.4.5.1,
                       containers,
                       data-default,
                       lens,
                       raw-strings-qq,
                       safe,
                       text,
                       text-icu,
                       time,
                       vector,
                       hspec,
                       file-embed

executable toshl-diff
  hs-source-dirs: app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends: base, toshl-diff

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , hspec-expectations-pretty-diff
                     , toshl-diff
                     , file-embed
                     , bytestring
                     , time
                     , Decimal
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             doctests.hs
  build-depends:       base
                     , doctest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
