name:                toshl-gate
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.org
homepage:            https://github.com/githubuser/toshl-gate#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Accounts
                     , Config
                     , Toshl
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , wreq
                     , aeson
                     , yaml
                     , text
                     , filepath
                     , bytestring
                     , lens
                     , containers
                     , time
                     , Decimal
                     , cassava
                     , iconv
                     , vector
                     , strptime
                     , reflex
                     , reflex-dom
  default-language:    Haskell2010
  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
                    , RecordWildCards
                    , DeriveGeneric
                    , ExtendedDefaultRules

executable toshl-gate-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , toshl-gate
                     , protolude
  default-language:    Haskell2010
  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
                    , RecordWildCards
                    , DeriveGeneric
                    , ExtendedDefaultRules

test-suite toshl-gate-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , toshl-gate
                     , protolude
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
                    , RecordWildCards
                    , DeriveGeneric
                    , ExtendedDefaultRules

source-repository head
  type:     git
  location: https://github.com/githubuser/toshl-gate
